Findbug issues resolved.